# seadog

./: README.md  pyproject.toml  setup.py
seadog/: cli.py  na.py  output.py  stats.py
seadog/graphs/: barchart.py  box.py  distplot.py  graph.py  graph_manager.py  heatmap.py  helper.py  histogram.py  pie.py  scatterplot.py  violin.py
tests/: test_seadog.py
