[tool.poetry]
name = "seadog"
version = "0.1.2"
description = "Statistical data visualization from the command line"
authors = ["leonhfr <hello@leonh.fr>"]
readme = "README.md"
homepage = "https://github.com/leonhfr/seadog"
repository = "https://github.com/leonhfr/seadog"
documentation = "https://github.com/leonhfr/seadog"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
numpy = "^1.18.0"
pandas = "^0.25.3"
matplotlib = "^3.1.2"
seaborn = "^0.9.0"
tabulate = "^0.8.6"
termplotlib = "^0.2.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
seadog = 'seadog.cli:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
